Fix bug when the addCollapsed function was executed when load the trees (input and sources) now, it is not executed because now, the application onli load the folder selected

--- a/public-angular/public/experiments/css/experiments.css
+++ b/public-angular/public/experiments/css/experiments.css
@@ -4,7 +4,9 @@ div#editor {
 
 div.treeview {
 	max-height: 650px;
+	max-width: 314px;
 	overflow: auto;
+	white-space: nowrap;
 }
 
 .vertical-align {
